--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "NODE_ICU_DATA=node_modules/full-icu next build",
     "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
-    "audit": "audit-ci -l -a 1769",
+    "audit": "audit-ci -l -a 1769 1002373 1002401 1002423 1002466 1002531",
     "checkTs": "tsc --noEmit",
     "format": "prettier --write .",
     "lint": "eslint --max-warnings 0 --ext .ts --ext .tsx --ext .js --ext .jsx src/",
@@ -23,96 +23,96 @@
     "lighthouse": "npx lhci autorun"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
     "cookie": "^0.4.1",
-    "dayjs": "^1.10.6",
+    "dayjs": "^1.10.7",
     "feed": "github:mattleff/feed#custome-elements-build",
     "framer-motion": "^4.1.17",
-    "full-icu": "^1.3.1",
-    "graphql": "^15.4.0",
+    "full-icu": "^1.4.0",
+    "graphql": "^15.6.1",
     "he": "^1.2.0",
-    "inter-ui": "^3.18.1",
+    "inter-ui": "^3.19.3",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "masonic": "^3.4.1",
-    "next": "^11.1.0",
-    "next-pwa": "^5.2.24",
+    "next": "^11.1.2",
+    "next-pwa": "^5.3.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
-    "react-intl": "^5.8.3",
-    "react-query": "^3.23.2",
+    "react-intl": "^5.20.12",
+    "react-query": "^3.25.1",
     "react-toastify": "^6.2.0",
-    "react-tooltip": "^4.2.11",
+    "react-tooltip": "^4.2.21",
     "react-topbar-progress-indicator": "^4.1.0",
-    "sass": "^1.26.10",
+    "sass": "^1.42.1",
     "striptags": "^3.2.0",
-    "video.js": "^7.14.3"
+    "video.js": "^7.15.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@formatjs/cli": "^2.12.0",
     "@graphql-codegen/add": "^3.1.0",
-    "@graphql-codegen/cli": "^2.0.1",
+    "@graphql-codegen/cli": "^2.2.0",
     "@graphql-codegen/schema-ast": "^2.2.0",
-    "@graphql-codegen/typescript": "^2.0.0",
-    "@graphql-codegen/typescript-operations": "^2.0.1",
-    "@graphql-codegen/typescript-react-query": "^2.0.0",
-    "@lhci/cli": "^0.7.1",
+    "@graphql-codegen/typescript": "^2.2.2",
+    "@graphql-codegen/typescript-operations": "^2.1.6",
+    "@graphql-codegen/typescript-react-query": "^2.1.3",
+    "@lhci/cli": "^0.8.2",
     "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
-    "@next/eslint-plugin-next": "^11.0.1",
+    "@next/eslint-plugin-next": "^11.1.2",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/dom": "^8.1.0",
+    "@testing-library/dom": "^8.7.2",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.2.1",
     "@types/cookie": "^0.4.1",
     "@types/he": "^1.1.2",
     "@types/jest-when": "^2.7.3",
     "@types/js-cookie": "^2.2.7",
-    "@types/lodash": "^4.14.172",
-    "@types/react": "^16.14.13",
+    "@types/lodash": "^4.14.175",
+    "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-facebook-login": "^4.1.4",
     "@types/react-is": "^17.0.2",
     "@types/react-query": "^1.2.9",
-    "@types/video.js": "^7.3.26",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@types/video.js": "^7.3.27",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "audit-ci": "^4.1.0",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-intl": "^8.2.4",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.0",
+    "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-formatjs": "^2.17.4",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jest-dom": "^3.9.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-testing-library": "^3.10.2",
-    "graphql-tag": "^2.11.0",
-    "husky": "^5.0.6",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-formatjs": "^2.17.8",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-testing-library": "^4.12.4",
+    "graphql-tag": "^2.12.5",
+    "husky": "^5.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.6",
-    "jest-canvas-mock": "^2.3.0",
+    "jest": "^27.2.4",
+    "jest-canvas-mock": "^2.3.1",
     "jest-date-mock": "^1.0.8",
-    "jest-when": "^3.3.1",
-    "prettier": "^2.3.2",
+    "jest-when": "^3.4.1",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "tsconfig-paths-jest": "^0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "type-fest": "^2.0.0",
+    "type-fest": "^2.3.4",
     "typescript": "^4.4.2"
   }
 }
