--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@graphql-codegen/typescript-react-query": "^2.1.3",
     "@lhci/cli": "^0.8.2",
     "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
+    "@next/bundle-analyzer": "^12.0.7",
     "@next/eslint-plugin-next": "^12.0.4",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/dom": "^8.11.1",
