--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "eslint-plugin-formatjs": "^2.18.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-lodash": "^7.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
