--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "next-pwa": "^5.4.4",
     "node-forge": "^1.2.1",
     "normalize.css": "^8.0.1",
+    "preact": "^10.6.4",
+    "preact-compat": "^3.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
