--- a/package.json
+++ b/package.json
@@ -116,5 +116,10 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "type-fest": "^2.11.1",
     "typescript": "^4.4.2"
+  },
+  "nextBundleAnalysis": {
+    "budget": 204800,
+    "budgetPercentIncreaseRed": 90,
+    "showDetails": true
   }
 }
