--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "NODE_ICU_DATA=node_modules/full-icu next build",
     "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
+    "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
     "audit": "audit-ci --config audit-ci.json",
     "checkTs": "tsc --noEmit",
     "format": "prettier --write .",
