--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "NODE_ICU_DATA=node_modules/full-icu next build",
+    "postbuild": "next-sitemap",
     "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
     "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
     "audit": "audit-ci --config audit-ci.json",
@@ -38,6 +39,7 @@
     "masonic": "^3.6.1",
     "next": "^12.1.0",
     "next-pwa": "^5.4.4",
+    "next-sitemap": "^2.5.10",
     "node-forge": "^1.2.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
