--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@silvermine/videojs-chromecast": "^1.3.3",
     "clsx": "^1.1.1",
     "cookie": "^0.4.1",
     "dayjs": "^1.10.7",
@@ -70,6 +71,7 @@
     "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
     "@next/bundle-analyzer": "^12.1.0",
     "@next/eslint-plugin-next": "^12.1.0",
+    "@silvermine/videojs-airplay": "^1.1.0",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
