--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-tooltip": "^4.2.21",
     "sass": "^1.42.1",
     "striptags": "^3.2.0",
-    "video.js": "^7.15.4"
+    "video.js": "^7.15.4",
+    "videojs-overlay": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
