--- a/.env-sample
+++ b/.env-sample
@@ -2,3 +2,4 @@ NEXT_PUBLIC_API_URL="https://graphql.audioverse.org/graphql"
 BIBLE_BRAIN_KEY=abc123
 SESSION_TOKEN_TRANSPORT_KEY="base64-abc123"
 SESSION_TOKEN_TRANSPORT_IV="base64-abc123"
+FACEBOOK_APP_ID=""
