--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "masonic": "^3.6.1",
     "next": "^12.1.0",
     "next-pwa": "^5.4.4",
+    "next-seo": "^5.4.0",
     "node-forge": "^1.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
