--- a/.env-sample
+++ b/.env-sample
@@ -3,3 +3,4 @@ BIBLE_BRAIN_KEY=abc123
 SESSION_TOKEN_TRANSPORT_KEY="base64-abc123"
 SESSION_TOKEN_TRANSPORT_IV="base64-abc123"
 FACEBOOK_APP_ID=""
+APP_URL="https://www.audioverse.org"
