--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@calm/eslint-plugin-react-intl": "^1.4.1",
     "@formatjs/cli": "^4.8.2",
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
