--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
 			"@lib/*": ["src/lib/*"],
 			"@components/*": ["src/components/*"],
 			"@containers/*": ["src/containers/*"],
-			"@pages/*": ["src/pages/*"],
+			"@pages/*": ["src/pages/*"]
 		},
 		"incremental": true
 	},
