--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -17,7 +17,7 @@ generates:
       - 'graphql-plugin-react-query.js'
       - 'graphql-plugin-getters.js'
     config:
-      fetcher: '@lib/api/fetchApi#graphqlFetcher'
+      fetcher: '@lib/api/graphqlFetcher#graphqlFetcher'
       avoidOptionals: true
       enumsAsConst: true
       scalars:
