--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
 			"@components/*": ["src/components/*"],
 			"@containers/*": ["src/containers/*"],
 			"@pages/*": ["src/pages/*"],
-			"@public/*": ["public/*"],
+			"@public/*": ["public/*"]
 		},
 		"incremental": true
 	},
