--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
         run: npm ci
       - name: Lint code
         run: npm run lint
+        timeout-minutes: 1
   prettier:
     runs-on: ubuntu-latest
     steps:
@@ -38,6 +39,7 @@ jobs:
         uses: rutajdash/prettier-cli-action@v1.0.0
         with:
           config_path: ./.prettierrc.yml
+        timeout-minutes: 1
       # This step only runs if prettier finds errors causing the previous step to fail
       # This steps lists the files where errors were found
       - name: Prettier Output
