--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie": "^0.4.1",
     "dayjs": "^1.10.7",
     "feed": "git+https://mattleff@github.com/mattleff/feed.git#custome-elements-build",
+    "react-hook-videojs": "git+https://narthur@github.com/narthur/react-hook-videojs",
     "full-icu": "^1.4.0",
     "he": "^1.2.0",
     "inter-ui": "^3.19.3",
@@ -45,7 +46,7 @@
     "next-pwa": "^5.4.4",
     "node-forge": "^1.3.0",
     "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
