--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons"
   },
   "dependencies": {
+    "@greatsumini/react-facebook-login": "^3.2.0",
     "@material-ui/core": "^4.12.3",
     "@silvermine/videojs-airplay": "^1.1.0",
     "@silvermine/videojs-chromecast": "^1.3.3",
@@ -49,8 +50,8 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-hook-videojs": "git+https://narthur@github.com/narthur/react-hook-videojs",
     "react-intl": "^5.20.12",
     "react-query": "^3.25.1",
     "react-tooltip": "^4.2.21",
