--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons"
   },
   "dependencies": {
-    "@greatsumini/react-facebook-login": "^3.2.0",
+    "react-facebook-login": "^4.1.1",
     "@material-ui/core": "^4.12.3",
     "@silvermine/videojs-airplay": "^1.1.0",
     "@silvermine/videojs-chromecast": "^1.3.3",
