--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-query": "^3.25.1",
     "react-tooltip": "^4.2.21",
     "sass": "^1.42.1",
+    "sharp": "^0.30.7",
     "striptags": "^3.2.0",
     "video.js": "^7.15.4",
     "videojs-overlay": "^2.1.5"
