--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
             "dom"
         ],
         "types": [
-            "vitest/globals"
+            "@types/testing-library__jest-dom"
         ],
         "sourceMap": true,
         "outDir": "./dist",
@@ -61,7 +61,8 @@
         "incremental": true
     },
     "exclude": [
-        "./*.js"
+        "./*.js",
+        "**/@types/jest/*"
     ],
     "include": [
         "next-env.d.ts",
