--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,72 +1,34 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "declaration": true,
-        "removeComments": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es6",
-        "lib": [
-            "es2017",
-            "es2019",
-            "dom"
-        ],
-        "types": [
-            "@types/testing-library__jest-dom"
-        ],
-        "sourceMap": true,
-        "outDir": "./dist",
-        "baseUrl": "./",
-        "skipLibCheck": true,
-        "strictPropertyInitialization": false,
-        "allowJs": true,
-        "jsx": "preserve",
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "paths": {
-            "@lib/*": [
-                "src/lib/*"
-            ],
-            "@components/*": [
-                "src/components/*"
-            ],
-            "@containers/*": [
-                "src/containers/*"
-            ],
-            "@pages/*": [
-                "src/pages/*"
-            ],
-            "@public/*": [
-                "public/*"
-            ],
-            "@__generated__/*": [
-                "src/__generated__/*"
-            ],
-            "@styles/*": [
-                "src/styles/*"
-            ],
-            "@types/*": [
-                "src/types/*"
-            ],
-            "@/*": [
-                "src/*"
-            ]
-        },
-        "incremental": true
-    },
-    "exclude": [
-        "./*.js",
-        "**/@types/jest/*"
-    ],
-    "include": [
-        "next-env.d.ts",
-        "**/*.ts",
-        "**/*.tsx"
-    ]
+	"compilerOptions": {
+		"module": "commonjs",
+		"declaration": true,
+		"removeComments": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"allowSyntheticDefaultImports": true,
+		"target": "es6",
+		"lib": ["es2017", "es2019", "dom"],
+		"types": ["@types/testing-library__jest-dom"],
+		"sourceMap": true,
+		"outDir": "./dist",
+		"baseUrl": "./",
+		"skipLibCheck": true,
+		"strictPropertyInitialization": false,
+		"allowJs": true,
+		"jsx": "preserve",
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
+		"esModuleInterop": true,
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"paths": {
+			"@public/*": ["public/*"],
+			"@*": ["src/*"]
+		},
+		"incremental": true
+	},
+	"exclude": ["./*.js", "**/@types/jest/*"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
