--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,6 +27,13 @@ jobs:
             --sitemap ${{github.event.deployment_status.target_url}}/sitemap-0.xml \
             --sitemap-find https://www.audioverse.org \
             --sitemap-replace ${{github.event.deployment_status.target_url}}
+      - name: Add comment
+        env:
+          BODY_PREFIX: '<!-- pa11y-ci results -->'
+        with:
+          script: |
+            const script = require('./.github/workflows/scripts/pa11y-ci.js')
+            await script({ context, core, github })
       - name: Upload results
         uses: actions/upload-artifact@v2
         with:
