--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -71,28 +71,9 @@ jobs:
           runs: 3
           uploadArtifacts: true
           temporaryPublicStorage: true
-      - name: Format comment
-        uses: actions/github-script@v6
-        id: formatComment
+      - name: Add comment
+        uses: actions/github-script@v5
         with:
           script: |
-            const parsed = JSON.parse('${{steps.lighthouse.outputs.links}}');
-            const keys = Object.keys(parsed);
-            const lines = keys.map(k => `- [${k}](${parsed[k]})`);
-            return `# Lighthouse Results\n\n${lines.join('\n')}`;
-          result-encoding: string
-      - name: Find comment
-        uses: peter-evans/find-comment@v2
-        id: fc
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'github-actions[bot]'
-          body-includes: '# Lighthouse Results'
-      - name: Create or update comment
-        if: always()
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          body: ${{steps.formatComment.outputs.result}}
-          edit-mode: replace
+            const script = require('./.github/workflows/scripts/lighthouse.js')
+            await script({ context, core, github, steps })
