--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: CI
 on: pull_request
+env:
+  NEXT_PUBLIC_API_URL: 'https://graphql-staging.audioverse.org/graphql'
 jobs:
   audit:
     runs-on: ubuntu-latest
