--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run codegen
-        run: npm run graphql:codegen
+        run: npm run codegen
       - name: Run tests
         run: npm run test:strict
   intl:
@@ -111,25 +111,3 @@ jobs:
         uses: flydiverny/github-typescript@v1
         with:
           script-file: .github/workflows/scripts/lang-summary.ts
-  codegen:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version-file: '.nvmrc'
-      - uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Install dependencies
-        run: npm ci
-      - name: Purge
-        run: npm run graphql:purge
-      - name: Codegen
-        run: npm run graphql:codegen
-      - name: Check no uncommitted changes
-        run: git diff --exit-code
