--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "predev": "npm run prebuild",
-        "dev": "concurrently \"npm:graphql:codegen:watch\" \"next dev\"",
-        "prebuild": "npm run graphql:codegen && concurrently \"npx update-browserslist-db@latest\" \"npm:cache\"",
+        "dev": "concurrently \"npm:codegen:watch\" \"next dev\"",
+        "prebuild": "concurrently \"npm:codegen\" \"npx update-browserslist-db@latest\"",
         "build": "NODE_ICU_DATA=node_modules/full-icu next build",
         "postbuild": "next-sitemap",
         "build:dev": "ENV_OVERRIDE=development npm run build -- --debug",
@@ -23,9 +23,6 @@
         "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
         "intl": "tsx ./scripts/lang-extract.ts && formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
         "precommit": "concurrently --max-processes=50% \"npm:format:fix\" \"npm:lint:fix\" \"npm:checkTs\" \"npm:intl\"",
-        "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen",
-        "graphql:codegen:watch": "npm run graphql:codegen -- --watch",
-        "graphql:purge": "find . -type d -name __generated__ -exec rm -r '{}' \\; -prune",
         "lighthouse": "npx lhci autorun",
         "analyze": "ANALYZE=true npm run build:webpack-only",
         "analyze:server": "BUNDLE_ANALYZE=server npm run build:webpack-only",
@@ -34,9 +31,12 @@
         "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'",
         "prepare": "husky",
         "knip": "knip --no-gitignore",
-        "fcbh": "tsx ./scripts/save-fcbh-meta.ts",
-        "indices": "tsx ./scripts/save-graphql-version-indices.ts",
-        "cache": "concurrently \"npm:fcbh\" \"npm:indices\""
+        "codegen": "npm run codegen:graphql && concurrently \"npm:codegen:indices\" \"npm:codegen:fcbh\"",
+        "codegen:watch": "npm run codegen && npm run graphql -- --watch",
+        "codegen:purge": "find . -type d -name __generated__ -exec rm -r '{}' \\; -prune",
+        "codegen:fcbh": "tsx ./scripts/save-fcbh-meta.ts",
+        "codegen:indices": "tsx ./scripts/save-graphql-version-indices.ts",
+        "codegen:graphql": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen"
     },
     "dependencies": {
         "@emotion/styled": "^11.13.0",
