--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -14,6 +14,10 @@ defaults:
 permissions:
   pull-requests: write
 
+env:
+  NEXT_PUBLIC_API_URL: 'https://graphql-staging.audioverse.org/graphql'
+  BIBLE_BRAIN_KEY: ${{ secrets.BIBLE_BRAIN_KEY }}
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
@@ -38,7 +42,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}
 
       - name: Run codegen
-        run: npm run graphql:codegen
+        run: npm run codegen
 
       - name: Build next.js app
         run: npm run build:webpack-only
