--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/user-event": "^14.5.2",
+        "@types/glob": "^8.1.0",
         "@types/node": "^22.10.2",
         "@types/react": "^18.3.8",
         "@types/react-dom": "^18.3.0",
