--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
         "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'",
         "prepare": "husky",
         "knip": "knip --no-gitignore",
-        "codegen": "npm run codegen:graphql && concurrently \"npm:codegen:fcbh\"",
+        "codegen": "npm run codegen:graphql",
         "codegen:watch": "npm run codegen && npm run graphql -- --watch",
         "codegen:purge": "find . -type d -name __generated__ -exec rm -r '{}' \\; -prune",
-        "codegen:fcbh": "tsx ./scripts/save-fcbh-meta.ts",
         "codegen:graphql": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen"
     },
     "dependencies": {
