--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -38,7 +38,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}
 
       - name: Run codegen
-        run: npm run codegen
+        run: npm run graphql:codegen
 
       - name: Build next.js app
         run: npm run build:webpack-only
