--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
         "jest-environment-jsdom": "^29.7.0",
         "jest-when": "^3.6.0",
         "knip": "^5.44.5",
+        "lint-staged": "^16.0.0",
         "nextjs-bundle-analysis": "^0.5.0",
         "pa11y-ci": "^3.1.0",
         "prettier": "^3.3.3",
@@ -176,5 +177,23 @@
     },
     "engines": {
         "node": "20.17.0"
+    },
+    "husky": {
+        "hooks": {
+        "pre-commit": "lint-staged --debug"
+        }
+    },
+    "lint-staged": {
+        "*.{ts,tsx}": [
+            "prettier --write",
+            "eslint --fix",
+            "bash -c tsc --noEmit"
+        ],
+        "*.{json,scss,graphql}": [
+            "prettier --write"
+        ],
+        "public/lang/*.json": [
+            "npm:intl"
+        ]
     }
 }
